force-app/main/default/objects/Stellar_DEX_Offer__c/Stellar_DEX_Offer__c.object-meta.xml
<CustomObject>
    <description>Stores stellar dex offer information such as ID, buying and selling assets, amount and price.</description>
    <label>Stellar DEX Offer</label>
    <nameField>
        <label>Stellar DEX Offer ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stellar DEX Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>