force-app/main/default/objects/Stellar_DEX_Offer__c/fields/Buying_Asset__c.field-meta.xml
<CustomField>
    <fullName>Buying_Asset__c</fullName>
    <label>Buying Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>