force-app/main/default/objects/Stellar_DEX_Offer__c/fields/Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>Offer_Amount__c</fullName>
    <label>Offer Amount</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>