force-app/main/default/objects/Stellar_DEX_Offer__c/fields/Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Offer_Price__c</fullName>
    <label>Offer Price</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>