force-app/main/default/objects/Stellar_DEX_Offer__c/fields/Percentage_Away_from_Spread_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Away_from_Spread_Threshold__c</fullName>
    <label>Percentage Away from Spread Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>