force-app/main/default/objects/Stellar_DEX_Offer__c/fields/Selling_Asset__c.field-meta.xml
<CustomField>
    <fullName>Selling_Asset__c</fullName>
    <label>Selling Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>