force-app/main/default/objects/Stellar_DEX_Offer__c/fields/Stellar_Offer_Trade_Notification__c.field-meta.xml
<CustomField>
    <fullName>Stellar_Offer_Trade_Notification__c</fullName>
    <label>Stellar Offer Trade Notification</label>
    <referenceTo>Stellar_Offer_Trade_Notification__c</referenceTo>
    <relationshipLabel>Stellar DEX Offers</relationshipLabel>
    <relationshipName>Stellar_DEX_Offers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>